vpc/subnets.tf
resource "aws_subnet" "public" {
  for_each = { for idx, cidr in var.public_subnets_cidrs : idx => cidr }

  vpc_id                  = aws_vpc.main.id
  cidr_block              = each.value
  availability_zone       = element(var.azs, tonumber(each.key))
  map_public_ip_on_launch = true

  tags = {
    Name = "medingen-public-${each.key}"
    Tier = "public"
  }
}

resource "aws_subnet" "private" {
  for_each = { for idx, cidr in var.private_subnets_cidrs : idx => cidr }

  vpc_id            = aws_vpc.main.id
  cidr_block        = each.value
  availability_zone = element(var.azs, tonumber(each.key))

  tags = {
    Name = "medingen-private-${each.key}"
    Tier = "private"
  }
}
